finished css and html

--- a/web1.html
+++ b/web1.html
@@ -4,18 +4,23 @@
   <meta charset="utf-8">
   <meta name="assignment1" content="My fist website">
   <meta name="author" content="Yuli Zhao">
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="_css/stylesheet.css">
 </head>
 <body>
   <h1>WHAT IS IN DREAM</h1>
   <h2>Black &amp; White</h2>
-  <p>My dream is always <em>dull</em> at the very beginning. It always <strong>black and white</strong> and with few blurry contents. The scene becomes clear as I stay in dream world over time. A dream world is unfolding before my eyes.</p>
-    <p><img src="_image/_black_white/bw1.jpg" width="400" height="400"><img src="_image/_black_white/bw2.jpg" width="400" height="400"><img src="_image/_black_white/bw3.jpg" width="400" height="400"><img src="_image/_black_white/bw4.jpg" width="400" height="400"></p>
+    <p>My dream is always <em>dull</em> at the very beginning. It always <strong>black and white</strong> and with few blurry contents. The scene becomes clear as I stay in dream world over time. A dream world is unfolding before my eyes.</p>
+    <p>&nbsp;</p>
+    <p><img src="_image/_black_white/bw1.jpg" width="600" height="600"><img src="_image/_black_white/bw2.jpg" width="600" height="600"><img src="_image/_black_white/bw3.jpg" width="600" height="600"><img src="_image/_black_white/bw4.jpg" width="600" height="600"></p>
+    <p>&nbsp;</p>
   <h2>Add A Littel Color</h2>
-  <p><strong>Colors</strong> start to apear scatteredly as I stay longer in the dream world. Usually only one simple color dominant the scene. My dream world always has a <b>color theme</b> decided by itself. </p>
-    <p><img src="_image/_little_color/lc1.jpg" width="400" height="400"><img src="_image/_little_color/lc2.jpg" width="400" height="400"><img src="_image/_little_color/lc3.jpg" width="400" height="400"><img src="_image/_little_color/lc4.jpg" width="400" height="400"></p>
+    <p><strong>Colors</strong> start to apear scatteredly as I stay longer in the dream world. Usually only one simple color dominant the scene. My dream world always has a <b>color theme</b> decided by itself. </p>
+    <p>&nbsp;</p>
+    <p><img src="_image/_little_color/lc1.jpg" width="600" height="600"><img src="_image/_little_color/lc2.jpg" width="600" height="600"><img src="_image/_little_color/lc3.jpg" width="600" height="600"><img src="_image/_little_color/lc4.jpg" width="600" height="600"></p>
+    <p>&nbsp;</p>
   <h2>What A Colorful World</h2>
-  <p>I have never had a colorful dream world. As colorful as the reality. Everytime when I saw the dull grey sky, I tell myself <em>&ldquo;I am in dream now&rdquo;</em>.</p>
-    <p><img src="_image/_colorful/c1.jpg" width="400" height="400"><img src="_image/_colorful/c2.jpg" width="400" height="400"><img src="_image/_colorful/c3.jpg" width="400" height="400"><img src="_image/_colorful/c4.jpg" width="400" height="400"></p>
+    <p>I have never had a colorful dream world. As colorful as the reality. Everytime when I saw the dull grey sky, I tell myself <em>&ldquo;I am in dream now&rdquo;</em>.</p>
+    <p>&nbsp;</p>
+    <p><img src="_image/_colorful/c1.jpg" width="600" height="600"><img src="_image/_colorful/c2.jpg" width="600" height="600"><img src="_image/_colorful/c3.jpg" width="600" height="600"><img src="_image/_colorful/c4.jpg" width="600" height="600"></p>
 </body>
 </html>
